@@ -1,0 +1,26 @@
+#	cpt file created by: makecpt -Cpolar -T-5/5/0.5
+#COLOR_MODEL = RGB
+#
+-5	0	0	255	-4.5	0	0	255
+-4.5	25	25	255	-4	25	25	255
+-4	51	51	255	-3.5	51	51	255
+-3.5	76	76	255	-3	76	76	255
+-3	102	102	255	-2.5	102	102	255
+-2.5	128	128	255	-2	128	128	255
+-2	153	153	255	-1.5	153	153	255
+-1.5	178	178	255	-1	178	178	255
+-1	204	204	255	-0.5	204	204	255
+-0.5	230	230	255	0	230	230	255
+0	255	255	255	0.5	255	255	255
+0.5	255	229	229	1	255	229	229
+1	255	204	204	1.5	255	204	204
+1.5	255	178	178	2	255	178	178
+2	255	153	153	2.5	255	153	153
+2.5	255	127	127	3	255	127	127
+3	255	102	102	3.5	255	102	102
+3.5	255	76	76	4	255	76	76
+4	255	51	51	4.5	255	51	51
+4.5	255	26	26	5	255	26	26
+B	0       0       255
+F	255     26      26
+N	128	128	128
